# llm-file-rename-n-sort

./: AGENTS.md  Brewfile  README.md  SUPPORTED_EXTENSIONS.txt  pip_requirements.txt  pyproject.toml  requirements.txt  run_file_cleanup.py
docs/: CHANGELOG.md  SUPPORTED_EXTENSIONS.md
rename_n_sort/: __init__.py  cli.py  config.py  llm.py  llm_engine.py  llm_parsers.py  llm_prompts.py  llm_utils.py  moondream2_caption.py  organizer.py  scanner.py
rename_n_sort/plugins/: __init__.py  audio_plugin.py  base.py  code_plugin.py  csv_plugin.py  document_plugin.py  docx_plugin.py  epub_plugin.py  generic.py  html_plugin.py  (+9 more)
tests/: conftest.py  generate_sample_files.py  run_smoke_cli.sh  test_dummy_llm.py  test_extract_test_files.py  test_filename_normalization.py  test_folder_vs_file.py  test_generate_sample_files.py  test_keep_original_decision.py  test_keep_original_heuristics.py  test_llm_backend_selection.py  test_llm_engine.py  test_llm_explain.py  test_llm_parsers_malformed.py  test_llm_parsers_strict.py  test_llm_prompts_shared.py  test_llm_reliability.py  test_model_selection.py  test_ollama_chat_llm.py  test_one_by_one.py  test_plugin_audio.py  test_plugin_code.py  test_plugin_csv.py  test_plugin_document.py  test_plugin_docx.py  test_plugin_epub.py  test_plugin_generic.py  test_plugin_html.py  test_plugin_image.py  test_plugin_odt.py  test_plugin_pdf.py  test_plugin_presentation.py  test_plugin_registry.py  test_plugin_spreadsheet.py  test_plugin_text.py  test_plugin_vector_image.py  test_plugin_video.py  test_plugin_zip.py  test_renamer.py  test_required_deps.py  (+2 more)
(+2 files in other folders)
